syntax = "proto3";
package contactical.reality.v1;

option java_package = "com.example.contacticalattestation.v1";
option java_multiple_files = true;

service Msg {
  rpc RegisterNode(MsgRegisterNode) returns (MsgRegisterNodeResponse);
  rpc CreateClaim(MsgCreateClaim) returns (MsgCreateClaimResponse);
}

// [수정 1] TEE 인증서 필드(cert_chain) 추가
message MsgRegisterNode {
     // 1. 등록자 주소
     string creator = 1;

     // [TEE] 2. 인증서 체인 (프록시 검증용)
     repeated string cert_chain = 2;

     // [TEE] 3. 챌린지 값
     string challenge = 3;

     // [Common] 4. 공개키 (ZK와 TEE가 공유)
     string pub_key = 4;

     // [ZK] 5. 영지식 증명 데이터
     bytes zk_proof = 5;

     // [ZK] 6. 이중 등록 방지용 식별자 (필수!)
     string nullifier = 6;

     // [ZK] 7. JWT Audience (앱 식별용)
     string jwt_aud = 7;

     // [ZK] 8. 공개 시그널
     repeated string public_signals = 8;
 }

message MsgRegisterNodeResponse {
  bool success = 1;
}

// [수정 2] 좌표 타입을 int64로 변경 (Go 서버와 통일)
message MsgCreateClaim {
  string creator = 1;
  string sensor_hash = 2;
  string gnss_hash = 3;
  string anchor_signature = 4;
  string data_signature = 5;
  int64  timestamp = 6;
  string payload = 7;
  string cert = 8;
  string node_id = 9;

  // string -> int64 변경 (1,000,000 곱해서 전송)
  int64 latitude = 10;
  int64 longitude = 11;

  repeated string nearby_nodes = 12;
  map<string, string> extra_attestation = 13;
}

message MsgCreateClaimResponse {}