package com.example.contacticalattestation

import android.os.Bundle
import android.security.keystore.KeyGenParameterSpec
import android.security.keystore.KeyProperties
import android.util.Base64
import android.util.Log
import android.widget.Button
import androidx.appcompat.app.AppCompatActivity
import androidx.lifecycle.lifecycleScope
import com.example.contacticalattestation.v1.MsgCreateClaim
import com.example.contacticalattestation.v1.MsgGrpcKt
import com.example.contacticalattestation.v1.MsgRegisterNode
import io.grpc.ManagedChannelBuilder
import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.delay
import kotlinx.coroutines.launch
import kotlinx.coroutines.withContext
import java.security.KeyPairGenerator
import java.security.KeyStore
import java.security.Signature
import kotlin.random.Random

class MainActivity : AppCompatActivity() {

    private val TAG = "KeyAttestation"
    private val KEY_ALIAS = "ContacticalKeyAlias"

    // ì²´ì¸ì—ì„œ ì‚¬ìš© ì¤‘ì¸ Alice ì£¼ì†Œ
    private val MY_WALLET_ADDRESS = "cosmos1nvmp58qukxmndy27z3tvjrx9yvek2p84r3clyg"

    private val channel by lazy {
        ManagedChannelBuilder
            .forAddress("10.0.2.2", 9095)
            .usePlaintext()
            .build()
    }

    private val stub by lazy {
        MsgGrpcKt.MsgCoroutineStub(channel)
    }

    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)

        val button = Button(this).apply {
            text = "Generate TEE Key & Register Node"
            setOnClickListener {
                lifecycleScope.launch {
                    registerNodeWithAttestation()
                }
            }
        }
        setContentView(button)
    }

    override fun onDestroy() {
        super.onDestroy()
        channel.shutdown()
    }

    // 1ë‹¨ê³„: í‚¤ ìƒì„± + ë…¸ë“œ ë“±ë¡
    private suspend fun registerNodeWithAttestation() = withContext(Dispatchers.IO) {
        try {
            // 1) ì±Œë¦°ì§€ ìƒì„±
            val challenge = ByteArray(32)
            Random.nextBytes(challenge)
            val challengeBase64 = Base64.encodeToString(challenge, Base64.NO_WRAP)

            Log.i(TAG, "ğŸ“Œ Challenge bytes len=${challenge.size}")
            Log.d(TAG, "ğŸ“Œ Challenge bytes: ${challenge.joinToString()}")
            Log.i(TAG, "ğŸ“Œ Challenge Base64 len=${challengeBase64.length}")
            Log.d(TAG, "ğŸ“Œ Challenge Base64: $challengeBase64")

            // 2) TEE í‚¤ ìƒì„±
            val keyPairGenerator = KeyPairGenerator.getInstance(
                KeyProperties.KEY_ALGORITHM_EC,
                "AndroidKeyStore"
            )

            val spec = KeyGenParameterSpec.Builder(
                KEY_ALIAS,
                KeyProperties.PURPOSE_SIGN
            )
                .setDigests(KeyProperties.DIGEST_SHA256)
                .setAttestationChallenge(challenge)
                .build()

            keyPairGenerator.initialize(spec)
            keyPairGenerator.generateKeyPair()

            Log.d(TAG, "âœ… TEE Key Pair Generated")

            // 3) ì¸ì¦ì„œ ì²´ì¸ ì¶”ì¶œ
            val keyStore = KeyStore.getInstance("AndroidKeyStore")
            keyStore.load(null)
            val certs = keyStore.getCertificateChain(KEY_ALIAS)

            if (certs == null || certs.isEmpty()) {
                Log.e(TAG, "âŒ Certificate chain is empty")
                return@withContext
            }

            Log.i(TAG, "ğŸ“œ Certificate Chain (${certs.size} certs)")

            // Base64 ì¸ì½”ë”© + ë¡œê·¸
            val certChainBase64 = certs.mapIndexed { index, cert ->
                val encoded = cert.encoded
                val b64 = Base64.encodeToString(encoded, Base64.NO_WRAP)
                Log.i(TAG, "ğŸ”‘ Cert[$index] DER len=${encoded.size}")
                Log.i(TAG, "ğŸ”‘ Cert[$index] Base64 len=${b64.length}")
                Log.d(TAG, "ğŸ”‘ Cert[$index] Base64: $b64")
                b64
            }

            // 4) MsgRegisterNode ìƒì„±
            val request = MsgRegisterNode.newBuilder()
                .setCreator(MY_WALLET_ADDRESS)
                .addAllCertChain(certChainBase64)
                .setChallenge(challengeBase64)
                .setPubKey("ì„ì‹œ_ê³µê°œí‚¤_ê°’")
                .build()

            Log.d(TAG, "ğŸ“¦ MsgRegisterNode.cert_chain[0] len=${request.certChainList[0].length}")
            Log.d(TAG, "ğŸ“¦ MsgRegisterNode.challenge len=${request.challenge.length}")

            Log.i(TAG, "ğŸ“¡ Calling RegisterNode RPC...")
            val response = stub.registerNode(request)

            if (response.success) {
                Log.i(TAG, "âœ… Node Registered! ID: $MY_WALLET_ADDRESS")

                // 5ì´ˆ ì •ë„ ëŒ€ê¸° í›„ Claim ì œì¶œ
                lifecycleScope.launch {
                    Log.i(TAG, "â³ Waiting 5 seconds for block confirmation...")
                    delay(5000)

                    Log.i(TAG, "ğŸš€ Submitting data now...")
                    submitDataWithSignature(MY_WALLET_ADDRESS)
                }
            } else {
                Log.e(TAG, "âŒ Registration Failed (Success=false)")
            }

        } catch (e: Exception) {
            Log.e(TAG, "âŒ Error during registration: ${e.message}", e)
            e.printStackTrace()
        }
    }

    // 2ë‹¨ê³„: ë°ì´í„° ì„œëª… + ì œì¶œ
    private suspend fun submitDataWithSignature(creatorAddress: String) = withContext(Dispatchers.IO) {
        try {
            val payload = "Hello Contactical"

            val keyStore = KeyStore.getInstance("AndroidKeyStore")
            keyStore.load(null)

            val entry = keyStore.getEntry(KEY_ALIAS, null) as? KeyStore.PrivateKeyEntry
            if (entry == null) {
                Log.e(TAG, "âŒ Private key not found")
                return@withContext
            }

            val signature = Signature.getInstance("SHA256withECDSA")
            signature.initSign(entry.privateKey)
            signature.update(payload.toByteArray(Charsets.UTF_8))
            val signatureBytes = signature.sign()
            val signatureBase64 = Base64.encodeToString(signatureBytes, Base64.NO_WRAP)

            Log.i(TAG, "âœï¸ Signature bytes len=${signatureBytes.size}")
            Log.d(TAG, "âœï¸ Signature bytes: ${signatureBytes.joinToString()}")
            Log.i(TAG, "âœï¸ Signature Base64 len=${signatureBase64.length}")
            Log.d(TAG, "âœï¸ Signature Base64: $signatureBase64")

            val certs = keyStore.getCertificateChain(KEY_ALIAS)
            val certBase64 = Base64.encodeToString(certs[0].encoded, Base64.NO_WRAP)
            Log.i(TAG, "ğŸ” Claim Cert Base64 len=${certBase64.length}")
            Log.d(TAG, "ğŸ” Claim Cert Base64: $certBase64")

            val request = MsgCreateClaim.newBuilder()
                .setCreator(creatorAddress)
                .setPayload(payload)
                .setDataSignature(signatureBase64)
                .setCert(certBase64)
                .setTimestamp(System.currentTimeMillis() / 1000)
                .setSensorHash("dummy_sensor_hash")
                .setGnssHash("dummy_gnss_hash")
                .setAnchorSignature("dummy_anchor_sig")
                .setNodeId(creatorAddress)
                .build()

            Log.d(TAG, "ğŸ“¦ MsgCreateClaim.data_signature len=${request.dataSignature.length}")
            Log.d(TAG, "ğŸ“¦ MsgCreateClaim.cert len=${request.cert.length}")

            Log.i(TAG, "ğŸ“¡ Calling CreateClaim RPC...")
            val response = stub.createClaim(request)
            Log.i(TAG, "âœ… Data Submitted Successfully!")

        } catch (e: Exception) {
            Log.e(TAG, "âŒ Error during data submission: ${e.message}", e)
        }
    }
}
